--- a/background-repeat.html
+++ b/background-repeat.html
@@ -5,6 +5,7 @@
 body {
   background-image: url("https://images.pexels.com/photos/326259/pexels-photo-326259.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
   background-repeat: repeat-x;
+    background-size: 200px;
 }
 </style>
 </head>
